--- a/project.lib/test-project.lib/Pages/Shared/_Layout.cshtml
+++ b/project.lib/test-project.lib/Pages/Shared/_Layout.cshtml
@@ -2,21 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewData["Title"] - test_project.lib</title>
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <header>
-        <partial name="_LoginPartial" />
-    </header>
 
-    <main>
-        @RenderBody()
-    </main>
 
+
+
+    <div class="container">
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
+    </div>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
